Fix: Header button position -Change style -Correct horizontal alignment

--- a/styles.sass
+++ b/styles.sass
@@ -83,15 +83,16 @@ $open-sans: 'Open Sans', sans-serif
             img
                 width: 100%
 
-    .btn
+    .pink-button
         color: white
         border-style: none
         background-color: $Pink
-        width: 60%
-        height: 20%
-        border-radius: 20px
+        width: 80%
+        border-radius: 100px
         font-weight: 600
-        padding: 3%
+        margin-bottom: 25%
+        padding: 4%
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.27)
 
     header
         padding-top: 10%
@@ -115,17 +116,16 @@ $open-sans: 'Open Sans', sans-serif
             padding: 7% 10%
         img
             width: 80%
-        #btnheader
+        .pink-button
             color: white
             border-style: none
             background-color: $Pink
-            width: 130%
-            height: 50%
-            border-radius: 20px
+            width: 80%
+            border-radius: 100px
             font-weight: 600
             margin-bottom: 25%
-            padding: 5%
-            justify-self: center
+            padding: 4%
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.27)
 
         .homeicon
             display: flex
@@ -230,20 +230,20 @@ $open-sans: 'Open Sans', sans-serif
             padding: 1% 38%
             position: relative
             right: 35%
+
         img
             width: 80%
-        #btnheader
+
+        .pink-button
             color: white
             border-style: none
             background-color: $Pink
-            width: 20%
-            height: 30%
-            border-radius: 20px
+            width: 80%
+            border-radius: 100px
             font-weight: 600
             margin-bottom: 25%
-            padding: 1% 4%
-            position: relative
-            left: 3%
+            padding: 4%
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.27)
 
         .homeicon
             display: flex
